# sbt-jni

./: .git-blame-ignore-revs  .gitignore  .scalafmt.conf  .travis.yml  CHANGELOG.md  LICENSE  README.md  build.sbt
.github/: release-drafter.yml
.github/workflows/: auto-approve.yml  ci.yml  release-drafter.yml  release.yml
.travis/: bintray.enc  build  sec.gpg.enc
examples/demo/: build.sbt
examples/demo/native/: CMakeLists.txt  main.c  org_example_jni_demo_Library__.h
examples/demo/project/: plugins.sbt
plugin/src/main/: .gitattributes
plugin/src/main/resources/com/github/sbt/jni/templates/: Cargo.toml  meson.build  meson.options
plugin/src/sbt-test/: .gitignore
plugin/src/sbt-test/sbt-jni/multiclasses/: README.md  build.sbt  test
plugin/src/sbt-test/sbt-jni/oneproject/: README.md  build.sbt  test
plugin/src/sbt-test/sbt-jni/overloads/: README.md  build.sbt
plugin/src/sbt-test/sbt-jni/simple/: README.md  build.sbt  test
plugin/src/sbt-test/sbt-jni/simple cargo with space/: README.md  build.sbt  core  native  project  test
plugin/src/sbt-test/sbt-jni/simple-cargo/: build.sbt  test
plugin/src/sbt-test/sbt-jni/simple-meson/: README.md  test
plugin/src/sbt-test/sbt-jni/simple-syntax/: build.sbt  native  test
plugin/src/test/resources/include/: README.md  com_github_sbt_jni_samples_Overloads.h
project/: Build.scala  SbtJniBuild.scala  Version.scala  plugins.sbt
samples/basic/: README.md  build.sbt
samples/basic/basic-core/: build.sbt
samples/basic/basic-native/src/: CMakeLists.txt  library.c
samples/basic/project/: plugins.sbt
(+138 files in other folders)
